<resources>
    <string name="app_name">kindercare</string>
    <string name="VaccineName">Vaccine Name</string>
    <string name="numberOfDoses">Doses</string>
    <string name="availableVaccine">Active</string>
    <string name="vaccineDescription"> Description </string>
    <string name="ageLimit">Age Limit</string>
    <string name="vaccineID">Enter ID</string>
    <string name="made_with_love">made with love</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="selectHospital">"Select Hospital"</string>
    <string name="appointment">"Appointment"</string>

</resources>